DevTools: fix ServiceWorker.deliverPushMessage

Originally regressed by
https://chromium-review.googlesource.com/c/chromium/src/+/876657

Bug: 878524
Change-Id: I3526eea2063a795b6f9049008cc564ca65c1ba04
Reviewed-on: https://chromium-review.googlesource.com/1255606
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595653}
Former-commit-id: 07911797fdd4aed3af960bd4b9cf019c2ea79c8e